--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.05 2007-04-26
+    - switch to Module::Install
+
 0.04 2006-07-04 09:21:00
     - That debug code wasn't quite production ready : /
 
