--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.08 
+    - Add AsCGI to list of build requirements.
+
 0.07 2007-09-01 11:03:00
     - Add DateTime to default list of scrubbed objects
     - Stringify rather than ref by default , 
