--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
-0.08 
-    - Add AsCGI to list of build requirements.
+0.08 2008-05-02
+    - Add AsCGI to list of test requirements.
+    - Check for defined()ness of $c->res->body so "0" is valid. (RT #30564)
 
 0.07 2007-09-01 11:03:00
     - Add DateTime to default list of scrubbed objects
